# django_softdelete

./: .gitignore  coverage.json  pyproject.toml
.github/workflows/: ci.yml
tests/: test_models.py
