[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-soft-delete"
dynamic = ["version"]
description = "Soft delete models, managers, queryset for Django"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
authors = [
    { name = "Alexander Yudkin", email = "san4ezy@gmail.com" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["Django >= 4.1"]

[project.urls]
Homepage = "https://github.com/san4ezy/django_softdelete"

[tool.hatch.version]
path = "django_softdelete/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/django_softdelete",
    "/tests"
]

[tool.hatch.build.targets.wheel]
include = [
    "/django_softdelete",
]

[tool.hatch.envs.hatch-test]
# https://hatch.pypa.io/latest/config/internal/testing/
randomize = true
extra-dependencies = [
    "pytest-django ~= 4.8.0",
    "pytest-cov ~= 5.0"
]

[tool.hatch.envs.test]
installer = "uv"
matrix-name-format = "{variable}-{value}"
dependencies = ["pytest", "pytest-cov","pytest-django", "coverage[toml]", "django~={matrix:django}"]

[tool.hatch.envs.test.scripts]
test = "pytest"
test-cov = "pytest --cov --cov-report=json --cov-report=term"

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
django = ["4.2"]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12"]
django = ["5.0"]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_project.settings"
addopts = "--nomigrations --pythonwarnings=all"